js262/test/language/statements/class/elements/syntax/early-errors/grammar-privatename-whitespace-error-static-field.js


/*---
description: No space allowed between sigil and IdentifierName (Static Field) (class declaration)
esid: prod-ClassElement
features: [class-static-fields-private, class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Updated Productions

    ClassElementName :
      PropertyName
      PrivateName

    PrivateName ::
      # IdentifierName

---*/


$DONOTEVALUATE();

class C {
  static # x;
}
